@@ -13,6 +13,7 @@
 #include "break-algorithm.hh"
 #include "lily-guile.hh"
 #include "matrix.hh"
+#include "prob.hh"
 
 struct Line_details {
   Real force_;
@@ -42,6 +43,21 @@ struct Line_details {
     break_penalty_ = 0;
     page_penalty_ = 0;
     turn_penalty_ = 0;
+  }
+
+  Line_details (Prob *pb)
+  {
+    force_ = 0;
+    extent_ = unsmob_stencil (pb->get_property ("stencil")) ->extent (Y_AXIS);
+    padding_ = 0;
+    space_ = 1.0;
+    inverse_hooke_ = 1.0;
+    break_permission_ = ly_symbol2scm ("allow");
+    page_permission_ = pb->get_property ("page-break-permission");
+    turn_permission_ = pb->get_property ("page-turn-permission");
+    break_penalty_ = 0;
+    page_penalty_ = robust_scm2double (pb->get_property ("page-break-penalty"), 0);
+    turn_penalty_ = robust_scm2double (pb->get_property ("page-turn-penalty"), 0);
   }
 };
 
